# SiNM

./: .gitignore  CMakeLists.txt  License.txt  README.md
cmake/: MyQtApp  SiNM
cmake/.qt/: QtDeploySupport.cmake
cmake/MyQtApp_autogen/: deps
cmake/SiNM_autogen/: deps
cmake/SiNM_autogen/6YEA5652QU/: moc_mainwindow.cpp
include/: dbg.h  imagewindow.h  mainwindow.h  screenshotwindow.h  version.h.in
src/: dbg.cpp  imagewindow.cpp  main  main.cpp  mainwindow.cpp  screenshotwindow.cpp
